--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,7 @@ dependencies {
     implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
 
 }
+
+task searchProduct (type: Test){
+    include '**/Runner*'
+}
